# MLP-Lightning-ClearML-Pipeline

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yml
configs/: heart_data_config.yaml  heart_mlp_config.yaml  mlp_heart_data_config.yaml
notebooks/heart_disease/: heart_data_review.ipynb
src/: config.py  constants.py  datamodule.py  dataset.py  heart_data.py  lightning_module.py  main.py  metrics.py  model.py  preprocess_heart.py  preprocessing.py  train.py
src/clearml_pipeline/: pipeline.py  train_task.py  utils.py
src/clearml_pipeline/init_data/: core.py  task.py
src/clearml_pipeline/preprocess/: core.py  task.py
src/data/: data_model.py
src/data/preprocessing/: main.py  model.py  path_helpers.py  steps.py
src/train/: datamodule.py  dataset.py  lightning_module.py  train.py
